--- a/webengineering/src/main/resources/application.properties
+++ b/webengineering/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 spring.jpa.show-sql = false
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.queries.users-query=select username, password, enabled from user where username=?
