renamed main class

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ webengineering/target/classes/images/logo.png
 webengineering/target/classes/static/css/style.css
 webengineering/target/classes/static/js/admin.js
 webengineering/target/classes/static/js/operator.js
+webengineering/target/classes/META-INF/webengineering.kotlin_module
